# TGaggregator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/: A1_PLATFORM_CORE.md  A2_DATA_INGESTION.md  A3_BACKEND_API.md  A4_FRONTEND_UI.md  A5_QA_OBSERVABILITY.md  A6_DEVOPS_SECURITY.md  HANDOFF_TEMPLATE.md
deploy/systemd/: install.sh  tgaggerator-api.service  tgaggerator-collector.service  tgaggerator-telegram-ui.service  tgaggerator-ui.service
docs/: 01_ROADMAP.md  02_WORKLOG.md  03_STATUS.md  04_PARALLEL_AGENTS.md  05_ARCHITECTURE_MVP.md  06_SPRINT_BACKLOG.md  07_DEPLOY_RUNBOOK.md  08_API_REFERENCE.md  09_SESSION_MEMORY_2026-03-16.md
migrations/: env.py
migrations/versions/: 0001_init.py
scripts/: run_api.py  run_telegram_ui.py  smoke_check.py
src/tgaggerator/: cli.py  config.py  db.py  init_db.py  migrations.py  models.py  repository.py  telegram_ui.py
src/tgaggerator/api/: app.py
src/tgaggerator/ingest/: collector_lock.py  dto.py  gateway.py  public_web.py
src/tgaggerator/ui/: app.py
tests/: conftest.py  test_api.py  test_cli_stack.py  test_config.py  test_lock.py  test_ops_api.py  test_repository.py
