[project]
name = "tgaggerator"
version = "0.1.0"
description = "Telegram channels aggregator: unified chronological feed"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.16",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "telethon>=1.36",
  "typer>=0.12",
  "streamlit>=1.40",
  "requests>=2.32",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tgaggerator"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100